# UMKA

./: .gitignore  CMakeLists.txt  README.md  test6.lang
UMKA-C/: BytecodeGenerator.cpp  BytecodeGenerator.h  ast.h  main_compiler.cpp
UMKA-C/compiletime/: bytecode_generator.cpp  bytecode_generator.h
UMKA-C/models/: ast.h  entries.h  funk_builder.h  opcodes.h
UMKA-C/runtime/: bytecode_generator.cpp  bytecode_generator.h
UMKA-GC/: Documentation.md  garbage_collector.h
UMKA-JIT/: jit_manager.cpp  jit_manager.h  jit_runner.cc  jit_runner.h  jitted_function.h
UMKA-JIT/optimizations/: base_optimization.h  const_folding.h  constant_propagation.h  dce.h
UMKA-JIT/tests/: jit_tests.cpp
UMKA-LP/: Documentation.md  lexer.l  main_ast.cpp  parser.y
UMKA-LP/examples/: test2.lang  test4.lang  test5.lang  test6.lang  test7.lang  test8.lang  test9.lang
UMKA-VM/: main.cpp
UMKA-VM/garbage_collector/: garbage_collector.h
UMKA-VM/model/: command_parser.h  model.cpp  model.h
UMKA-VM/parser/: command_parser.cpp  command_parser.h
UMKA-VM/runtime/: command_parser.h  operations.h  profiler.h  stack_machine.h  standart_funcs.cpp  standart_funcs.h
UMKA-VM/tests/: stack_machine_test.cpp
byte code examples/: basic_arithmetic  factorial  strings_and_casts
docs/: Documantation.md
lexerAndParser/: CMakeLists.txt  lexer.l  main.cpp  main_ast.cpp  parser.y
lexerAndParser/examples/: test.lang  test3.lang
src/: lexer.l  main.cpp  parser.y
test/: run_umka_tests.py
test/byte code examples/: buble_sort  complex_array  for_for  functions  while
test/bytecodeExamples/: arrays  basic_arithmetic  eratosfen  files  if_else
test/jit tests/after optimization/constant_folding/: constant_folding_compare  constant_folding_hard_arithm  constant_folding_simple  constant_folding_true_false
test/jit tests/after optimization/dead_code_elimination/: ignore_function  simple  store_and_forget
test/jit tests/after optimization/loop_unrolling/: simple  while
test/jit tests/text byte code examples/constant_folding/: constant_folding_compare  constant_folding_hard_arithm  constant_folding_simple  constant_folding_true_false
test/jit tests/text byte code examples/dead_code_elimination/: ignore_function  simple  store_and_forget
test/jit tests/text byte code examples/loop_unrolling/: simple  while
test/text byte code examples/: buble_sort  eratosfen  files  while
test/textBytecodeExamples/: arrays  factorial  for_for  strings_and_casts
test/text_bytecode_examples/: if_else
test/umka examples/: basic_arithmetic  buble_sort  complex_array  for_for  strings_and_casts  while
test/umkaExamples/: arrays  assert_and_input  buble_sort  class_tree_node  eratosfen  factorial  files  strings_and_casts  test_class
test/umka_examples/: arrays  basic_arithmetic  buble_sort  class_tree_node  complex_funcs  dijkstra  eratosfen  factorial  functions  garbage_collector  merge_sort  nbody  polymorphism  small_class  standart_funcs  test_class
text byte code examples/: basic_arythmetic  complea_array  functions
umka examples/: eratosfen  for_for  if_else  strings_and_casts
